@@ -1,4 +1,4 @@
-# LIST OF CHANGES FROM LAST RELEASE:			<$Revision: 1.1670.2.2 $>
+# LIST OF CHANGES FROM LAST RELEASE:			<$Revision: 1.1670.2.3 $>
 #
 #
 # [Note: This file does not mention every change made to the NetBSD source tree.
@@ -1263,3 +1263,4 @@ Changes from NetBSD 5.0 to NetBSD 6.0:
 		created with quotadump. [dholland 20120212]
 	postfix(1): Import version 2.8.8 [tron 20120217]
 	pkg_install(1): Import version 20120128 [tron 20120219]
+	postfix(1): Add support for SQLite tables. [tron 20120304]
